--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -4,10 +4,128 @@ author: "Carolyn Martinez"
 date: "2024-09-17"
 output: github_document
 ---
-
+1. Loading pakcages needed 
 ```{r setup, echo=FALSE, message = FALSE}
 
 library(tidyverse)
+library(janitor)
+library(readxl)
+library(haven)
 ```
 
-This document will show hoe to improt data. 
+This document will show hoe to import data from R, not form the files.
+
+
+*How to tell computer where the file is:*
+
+1. Absolute path - leads the computer to the root directory 
+   
+   Some issues - not efficient
+
+2. Relative path - tells you how to get there from where you are right not 
+ 
+  *Best practice* Do this by creating an Rproject that contains all the moving parts of the project. 
+
+## Importing the data from the files AND clean the column names 
+```{r}
+litters_df = read_csv("data_import_examples/FAS_litters.csv")
+
+litters_df = janitor::clean_names(litters_df)
+```
+Note: janitor:: clean_names means "using the function clean_names" in the janitor package
+
+## Look at the data set 
+
+```{r}
+litters_df
+
+head(litters_df)
+tail(litters_df, 10)
+```
+
+##looking at the ENTIRE data frame - opens a new window 
+```{r  eval=FALSE}
+view(litters_df)
+```
+
+## Learning Assessment: loading FAS_pups.csv and cleaning the names 
+
+```{r}
+pups_df=read_csv("data_import_examples/FAS_pups.csv")
+
+pups_df = janitor::clean_names(pups_df)
+
+pups_df
+
+```
+## How to make data import seamless 
+using the ?read_csv command to see the different optns 
+
+*looking at the options*
+
+```{r}
+litters_df=
+  read_csv(
+    file="data_import_examples/FAS_litters.csv",
+    col_names = FALSE,
+    skip=1
+    )
+```
+  Notes: 
+  - skip = 1 allows you to skip lines depending on how the data is structured. 
+  - col_names = false is saying the column names are not actually the names. 
+  
+  
+  *when you are missing data*
+```{r}
+  litters_df=
+  read_csv(
+  file="data_import_examples/FAS_litters.csv",
+  na=c("NA", "", ".")
+)
+```
+
+*What if we code 'group' as a factor variable? - changing variable types*
+
+```{r}
+litters_df=
+  read_csv(
+  file="data_import_examples/FAS_litters.csv",
+  na=c("NA", "", "."),
+  col_types = cols(
+    Group=col_factor()
+    )
+  )
+```
+
+## Importing an Excel File 
+
+```{r}
+mlb_df=read_excel("data_import_examples/mlb11.xlsx", sheet="mlb11")
+
+mlb_df
+```
+```{r}
+pulse_df=read_sas("data_import_examples/public_pulse_data.sas7bdat")
+
+pulse_df
+
+```
+
+## Never use read.csv()
+
+This is not good because it does not give a lot of info on the data 
+- missing the type of variables and how the data is coded
+
+## Never do this - you should not be removing the variables from the data -> EVER
+```{r}
+litters_df$L
+```
+
+
+
+
+
+
+
+
